# space-diner

./: .gitignore  INSTALL.md  Makefile  README.md  README.txt  requirements.in  requirements.txt  setup.cfg  space-diner.py
levels/: __init__.py  level1.yaml  level1_moon.yaml  level2_mars.yaml  level_1_Moon.yaml  level_2_Mars.yaml  notes_titan.yaml  test.yaml
spacediner/: __main__.py  actions.py  activities.py  cheats.py  cli.py  diner.py  food.py  generic.py  goals.py  guests.py  ingredients.py  kitchen.py  languages.py  level.py  levels.py  main.py  merchants.py  ptpython.py  reviews.py  rewards.py  run.py  save.py  settings.py  shopping.py  skills.py  social.py  sozial.py  storage.py  time.py  tutorial.py
