[metadata]
# replace with your username:
name = space-diner
version = 0.9.0
author = Marta Wierzba
author_email = marta.wierzba@mailbox.org
description = Space Diner is a sci-fi themed, text-based sim game.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/2e2a/space-diner/
project_urls =
    Bug Tracker = https://github.com/2e2a/space-diner/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    PyYaml>=5

[options.package_data]
levels = *.yaml

[options.entry_points]
console_scripts =
    space-diner = spacediner.run:run
